--- a/css/color_theme.css
+++ b/css/color_theme.css
@@ -968,7 +968,7 @@ Theme Primary Color
 
 /*---Box---*/
 .theme-primary .box-primary {
-  background-color: #475F7B !important; }
+  background: linear-gradient(45deg, #5A8DEE, #00CFDD); }
   .theme-primary .box-primary.box-bordered {
     border-color: #475F7B; }
 .theme-primary .box-outline-primary {
