--- a/css/style.css
+++ b/css/style.css
@@ -14364,7 +14364,7 @@ ul.panel-actions > li {
   padding-left: 0;
   padding-bottom: 10px; }
   .panel-group-simple .panel-title:before, .panel-group-simple .panel-title:after {
-    right: 5px; }
+    left: 153px; }
 .panel-group-simple .panel-collapse .panel-body {
   padding-left: 0;
   padding-right: 0;
